@@ -1,4 +1,9 @@
-2009-06-16  David Sedeño <david@alderia.com>
+2009-06-18  David Sedeño <david@alderia.com>
+
+        * src/main_window_cb.c (on_md5ok_button_clicked): 
+        Make the markup work again. Remove from the traduction str.
+        
+2009-06-17  David Sedeño <david@alderia.com>
 
 	* src/main_window_cb.c: Remove gnome_vfs and use gio 
 	in md5sum comprobation.
